destroy old tooltips; add help tooltip (from demo, but using tippy)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,7 +28,14 @@
                 <span id="level-icon-wrapper"></span>
             </td>
             <td id="help">
-                <div id="help-icon"> ? </div>
+                <div id="help-icon" data-tippy-content="Click &amp; drag to paint on the canvas!
+                    You may choose from three different brush sizes and shapes, by clicking the tool
+                    icons or using the arrow keys. Try to fill in the entire heart before the time runs out!
+                    Painting outside the lines will <strong>not</strong> be tolerated.
+                    <hr>
+                    <i>Paint by Gender</i> is a work in progress about gender norms and the pressure to conform,
+                    designed & developed by Elana Bell Bogdan."
+                > ? </div>
             </td>
         </tr>
         <tr class="spacer"></tr>
