support quantized brushes; new square challenge; higher-resolution reticle;  font update & layout tweaks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
     <title> Paint By Gender </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Exo+2:wght@200;400&family=Megrim&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Exo+2:wght@200;400&family=Rubik+Iso&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
         </colgroup>
         <tr id="header">
             <td id="title">
-                <a href="https://belladonnagable.itch.io/paint-by-gender">Paint by gender</a>
+                <a href="https://belladonnagable.itch.io/paint-by-gender">Paint By Gender</a>
             </td>
             <td id="status">
                 <span id="level-number">Level 1</span>
@@ -65,8 +65,8 @@
                     <div id="overlay-body"></div>
                 </div>
                 <div id="canvas-texture"></div>
-                <canvas id="game" width=500px height=500px></canvas>
-                <canvas id="reticle" width=120px height=120px></canvas>
+                <canvas id="game" width=540px height=540px></canvas>
+                <canvas id="reticle" width=240px height=240px></canvas>
                 <div id="game-background"></div>
             </td>
             <td id="tools" align="center">
