--- a/src/html/index.html
+++ b/src/html/index.html
@@ -112,9 +112,9 @@
         <tr id="footer">
             <td />
             <td align="center">
-                <div id="eraser" class="bottom-btn">ERASE</div>
                 <div id="start" class="bottom-btn">START LEVEL</div>
                 <div id="retry" class="bottom-btn"></div>
+                <div id="undo" class="bottom-btn">UNDO</div>
             </td>
             <td />
         </tr>
