limit number of undos per level

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -114,7 +114,7 @@
             <td align="center">
                 <div id="start" class="bottom-btn">START LEVEL</div>
                 <div id="retry" class="bottom-btn"></div>
-                <div id="undo" class="bottom-btn">UNDO</div>
+                <div id="undo" class="bottom-btn" data-status>UNDO</div>
             </td>
             <td />
         </tr>
