use css instead of js for game layer alignment

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,14 +60,15 @@
                 </div>
             </td>
             <td id="main">
-                <div id="overlay-text">
-                    <div id="overlay-title"></div>
-                    <div id="overlay-body"></div>
+                <div id="game-wrapper">
+                    <div id="overlay-text">
+                        <div id="overlay-title"></div>
+                        <div id="overlay-body"></div>
+                    </div>
+                    <div id="canvas-texture"></div>
+                    <canvas id="game" width=540px height=540px></canvas>
+                    <canvas id="reticle" width=240px height=240px></canvas>
                 </div>
-                <div id="canvas-texture"></div>
-                <canvas id="game" width=540px height=540px></canvas>
-                <canvas id="reticle" width=240px height=240px></canvas>
-                <div id="game-background"></div>
             </td>
             <td id="tools" align="center">
                 <div class="tool-wrapper" id="brush-size">
