begin massive refactor of code into object-oriented classes and utilities; finish removing Exo 2; reorganize less

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,18 +6,18 @@
     <title> Paint by Gender </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;400&family=Slackey&family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Slackey&family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
 </head>
 
-<body class="show-overlay show-blur">
+<body class="show-game show-overlay show-blur">
     <navbar id="menu-bar">
         <div id="title">
             <a href="https://belladonnagable.itch.io/paint-by-gender">Paint by Gender</a>
         </div>
         <div id="status">
             <span id="level-number">Level 1</span>
-            <span id="level-separator">|</span>
+            <span id="level-separator">//</span>
             <span id="level-name">Demo</span>
             <span id="level-icon-wrapper"></span>
         </div>
