improve sliders (colored orb marker, danger animation, better CSS)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -88,16 +88,16 @@
                 <div id="time">0:00</div>
                 <div class="slider" id="percent-painted">
                     <div class="slider-wrapper">
-                        <div class="slider-outline"></div>
                         <div class="slider-fill"></div>
                     </div>
                     <div class="slider-label">% Painted</div>
                 </div>
                 <div class="slider" id="spill-warning">
                     <div class="slider-wrapper">
-                        <div class="slider-outline"></div>
                         <div class="slider-fill"></div>
-                        <div class="slider-mark"></div>
+                        <div class="slider-mark">
+                            <div class="mark-color"></div>
+                        </div>
                     </div>
                     <div class="slider-label">Transgression</div>
                 </div>
