support new tooltip design; start writing tooltip text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,16 +47,16 @@
                     <div class="tool" id="guybrush">
                         <img src="../../img/guybrush.png" width="38" height="38">
                     </div>
-                    <div class="tool" id="magic-wand">
-                        <img src="../../img/magicwand.png" width="38" height="44">
+                    <div class="tool" id="mystery-tool">
+                        <img src="../../img/question_mark.png" width="27" height="37">
                     </div>
                 </div>
                 <div class="tool-group group-vertical">
-                    <div class="tool" id="btn-undo">
+                    <div class="tool" id="btn-undo" data-tippy-content="Undo">
                         <img src="../../img/undo_btn.png" width="34" height="32">
                         <div id="undo-status"></div>
                     </div>
-                    <div class="tool" id="btn-pause">
+                    <div class="tool" id="btn-pause" data-tippy-content="Pause">
                         <img id="play-icon" src="../../img/play.png" width="25" height="29">
                         <img id="pause-icon" src="../../img/pause.png" width="25" height="29">
                     </div>
