add boob shape; on fail, retry challenge up to 3 times before resetting level; improve button width styling; better flavor text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,9 +23,9 @@
         </div>
         <div id="help">
             <div id="help-icon" data-tippy-content="Click &amp; drag to paint on the canvas!
-                You may choose from three different brush sizes and shapes, by clicking the tool
-                icons or using the arrow keys. Try to fill in the entire heart before the time runs out!
-                Painting outside the lines will <strong>not</strong> be tolerated.
+                You can choose your brush type &amp; size by clicking the tool icons (or using the arrow keys),
+                but sometimes your options will be restricted. Try to fill in each shape before
+                the time runs out! Painting outside the lines will <strong>not</strong> be tolerated.
                 <hr>
                 <i>Paint by Gender</i> is a work in progress about gender norms and the pressure to conform,
                 designed & developed by Elana Bell Bogdan."
@@ -69,10 +69,10 @@
                         <div id="overlay-body"></div>
                         <div id="overlay-btns">
                             <div id="start" class="overlay-btn"></div>
-                            <div id="resume" class="overlay-btn">Continue</div>
+                            <div id="resume" class="overlay-btn">Keep trying</div>
                             <div id="retry" class="overlay-btn"></div>
                             <div id="next-level" class="overlay-btn">Next level</div>
-                            <div id="quit" class="overlay-btn">Quit</div>
+                            <div id="quit" class="overlay-btn">I'm done</div>
                         </div>
                     </div>
 
