--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,7 @@
 <body class="show-game show-overlay show-blur preload">
     <navbar id="menu-bar">
         <div id="title">
-            <a href="https://belladonnagable.itch.io/paint-by-gender">Paint by Gender</a>
+            <a href="https://belladonnagable.itch.io/paint-by-gender"><span>Paint</span><span>by</span><span>Gender</span></a>
         </div>
         <div id="status">
             <span id="level-number">Level 1</span>
@@ -75,6 +75,8 @@
                             <div id="quit" class="overlay-btn">I'm done</div>
                         </div>
                     </div>
+
+                    <canvas id="confetti-canvas"></canvas>
 
                     <div id="new-level-curtain"></div>
                     <canvas id="blurred-game" width=540px height=540px></canvas>
