add splash screen; rename transgression as oopsies

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
 </head>
 
-<body class="show-game show-overlay show-blur preload">
+<body class="show-splash preload">
     <navbar id="menu-bar">
         <div id="title">
             <a href="https://belladonnagable.itch.io/paint-by-gender"><span>Paint</span><span>by</span><span>Gender</span></a>
@@ -32,6 +32,12 @@
             > ? </div>
         </div>
     </navbar>
+    <div id="splash-screen">
+        <div id="splash-wrapper">
+            <img src="../../img/pbg_splash.jpg">
+            <button id="btn-begin">Let's paint!</button>
+        </div>
+    </div>
     <table id="layout" class="unselectable">
         <colgroup>
             <col width="33%">
@@ -103,7 +109,7 @@
                             <div class="mark-color"></div>
                         </div>
                     </div>
-                    <div class="slider-label">Transgression</div>
+                    <div class="slider-label">Oopsies</div>
                 </div>
             </td>
         </tr>
