add content warning; use countdowns to provide more time to read tooltips between challenges; support WASD keys for righties

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,7 @@
 <body class="show-splash preload">
     <navbar id="menu-bar">
         <div id="title">
-            <a href="https://belladonnagable.itch.io/paint-by-gender"><span>Paint</span><span>by</span><span>Gender</span></a>
+            <span>Paint</span><span>by</span><span>Gender</span>
         </div>
         <div id="status">
             <span id="level-number">Level 1</span>
@@ -35,6 +35,7 @@
     <div id="splash-screen">
         <div id="splash-wrapper">
             <img src="../../img/pbg_splash.jpg">
+            <div id="disclaimer">*May evoke feelings of sexism, transphobia, and fatphobia. Not suited for actual children.</div>
             <button id="btn-begin">Let's paint!</button>
         </div>
     </div>
