finalize language and difficulty balance; don't restrict retries

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,13 +22,16 @@
             <span id="level-icon-wrapper"></span>
         </div>
         <div id="help">
-            <div id="help-icon" data-tippy-content="Click &amp; drag to paint on the canvas!
-                You can choose your brush type &amp; size by clicking the tool icons (or using the arrow keys),
-                but sometimes your options will be restricted. Try to fill in each shape before
-                the time runs out! Painting outside the lines will <strong>not</strong> be tolerated.
+            <div id="help-icon" data-tippy-content="
+                <i>Paint by Gender</i> is a work in progress about gender norms and the pressures to conform,
+                designed & developed by Elana Bell Bogdan.
                 <hr>
-                <i>Paint by Gender</i> is a work in progress about gender norms and the pressure to conform,
-                designed & developed by Elana Bell Bogdan."
+                <strong>To play:</strong><br>
+                🖱️ Click &amp; drag to paint on the canvas<br>
+                🖌️ Choose your brush type &amp; size by clicking the tool icons (or using the arrow keys)<br>
+                ⚠️ Sometimes your brush options will be restricted!<br>
+                ⌛ Try to fill in each shape before the time runs out<br>
+                🙅 Painting outside the lines will <strong>not</strong> be tolerated!"
             > ? </div>
         </div>
     </navbar>
