Waffle revisions: rebalance challenge difficulty; show completion percent; don't hide reticle before start; press Z to undo; a couple language changes; no splash screen gradient

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,8 +37,8 @@
     </navbar>
     <div id="splash-screen">
         <div id="splash-wrapper">
-            <img src="../../img/pbg_splash.jpg">
-            <div id="disclaimer">*May evoke feelings of sexism, transphobia, and fatphobia. Not suited for actual children.</div>
+            <img src="./dist/pbg_splash.jpg">
+            <div id="disclaimer">*May evoke feelings of sexism, transphobia, and fatphobia. Not recommended for actual children.</div>
             <button id="btn-begin">Let's paint!</button>
         </div>
     </div>
@@ -52,23 +52,23 @@
             <td id="tools" align="right">
                 <div class="tool-group group-vertical radio-group" data-group="toolType">
                     <div class="tool active" id="galbrush">
-                        <img src="../../img/galbrush.png" width="38" height="38">
+                        <img src="./dist/galbrush.png" width="38" height="38">
                     </div>
                     <div class="tool" id="guybrush">
-                        <img src="../../img/guybrush.png" width="38" height="38">
+                        <img src="./dist/guybrush.png" width="38" height="38">
                     </div>
                     <div class="tool" id="mystery-tool">
-                        <img src="../../img/question_mark.png" width="27" height="37">
+                        <img src="./dist/question_mark.png" width="27" height="37">
                     </div>
                 </div>
                 <div class="tool-group group-vertical">
                     <div class="tool" id="btn-undo" data-tippy-content="Undo">
-                        <img src="../../img/undo_btn.png" width="34" height="32">
+                        <img src="./dist/undo_btn.png" width="34" height="32">
                         <div id="undo-status"></div>
                     </div>
                     <div class="tool" id="btn-pause" data-tippy-content="Pause">
-                        <img id="play-icon" src="../../img/play.png" width="25" height="29">
-                        <img id="pause-icon" src="../../img/pause.png" width="25" height="29">
+                        <img id="play-icon" src="./dist/play.png" width="25" height="29">
+                        <img id="pause-icon" src="./dist/pause.png" width="25" height="29">
                     </div>
                 </div>
             </td>
@@ -104,7 +104,7 @@
                     <div class="slider-wrapper">
                         <div class="slider-fill"></div>
                     </div>
-                    <div class="slider-label">% Painted</div>
+                    <div class="slider-label">0% Painted</div>
                 </div>
                 <div class="slider" id="spill-warning">
                     <div class="slider-wrapper">
