patches for most UI issues on Safari & Mac

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,7 +42,7 @@
             <button id="btn-begin">Let's paint!</button>
         </div>
     </div>
-    <table id="layout" class="unselectable">
+    <table id="layout">
         <colgroup>
             <col width="33%">
             <col width="33%">
